[package]
name = "rust-cve"
version = "0.1.0"
authors = ["Yechan Bae <yechan@gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
